# sqlcraft

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: on-commit.yml
scripts/: build-and-publish.sh
src/: __init__.py  base.py  behaviours.py  command.py  conn.py  delete.py  errors.py  insert.py  misc.py  query.py  update.py
src/flow_sql/: __init__.py  base.py  behaviours.py  command.py  conn.py  constants.py  copy_.py  delete.py  errors.py  funcs.py  insert.py  misc.py  query.py  update.py
src/sqlcraft/: __init__.py  base.py  behaviours.py  command.py  constants.py  delete.py  query.py
tests/: connection.py  funcs.py
tests/unit/: test_command.py  test_conn.py  test_copy.py  test_delete.py  test_funcs.py  test_insert.py  test_query.py  test_update.py
